k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tayooli-core
  labels:
    app.kubernetes.io/part-of: tayooli
