k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tayooli-api
  namespace: tayooli-core
  labels:
    app.kubernetes.io/name: tayooli-api
    app.kubernetes.io/part-of: tayooli-erp
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app: tayooli-api
  ports:
    - name: http
      port: 8081
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
